--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Octopus Energy Tariff Data</title>
+    <title>Octopus Energy Dashboard</title>
     <style>
       body {
         margin: 0;
